Add all route into Swagger
